--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,16 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery {
+  list-style-type: none;
+  display: grid;
+  gap: 15px;
+  padding: 0;
+}
+
+
+.gallery img {
+  max-width: 100%;
+  height: auto;
+}
